[package]
name = "binance_connector"
version = "0.1.1"
authors = ["Enos Domingues mail@enos.dev"]
edition = "2021"
description = "A Rust library for interacting with the Binance API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EnosDomingues/binance_connector"
keywords = ["binance", "api", "crypto", "trading"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.22"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
